--- a/package.json
+++ b/package.json
@@ -11,31 +11,33 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.0.5",
+    "@react-native-clipboard/clipboard": "^1.14.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
-    "react": "18.3.1",
+    "@shopify/flash-list": "^1.7.1",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.7.7",
+    "i18next": "^24.0.0",
+    "react": "18.3.1",
+    "react-i18next": "^15.1.1",
     "react-native": "0.75.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-mmkv": "^2.12.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^15.7.1",
+    "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "react-native-fs": "^2.20.0",
-    "react-native-fast-image": "^8.6.3",
-    "react-native-mmkv": "^2.12.2",
-    "redux-persist": "^6.0.0",
-    "react-native-svg": "^15.7.1",
-    "react-native-uuid": "^2.0.2",
-    "@shopify/flash-list": "^1.7.1",
-    "@twotalltotems/react-native-otp-input": "^1.3.11",
-    "@react-native-clipboard/clipboard": "^1.14.2"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
